--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
   <section class="p-8 text-center">
     <h2 class="text-xl font-bold text-pink-700 mb-2">Our Location</h2>
     <iframe class="mx-auto rounded-lg shadow" width="100%" height="300" frameborder="0" style="border:0"
-      src="https://www.google.com/maps/embed/v1/place?q=Johannesburg&key=YOUR_API_KEY" allowfullscreen>
+      src="https://www.google.com/maps/embed/v1/place?q=Johannesburg&key=mojelakarabo19@gmail.com" allowfullscreen>
     </iframe>
   </section>
 
